--- a/style.css
+++ b/style.css
@@ -188,6 +188,10 @@ h1 {
     align-items: center;
     justify-content: center;
   }
+  .between {
+    width: 60%;
+    font-size: 1.8rem;
+  }
   .message {
     margin-bottom: 4rem;
     font-size: 2.4rem;
